--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MMM-DailyPokemon",
-  "version": "1.0.0",
-  "description": "Todo: Insert description here!",
+  "version": "1.1.0",
+  "description": "Forked from Original for Shiny feature!",
   "main": "MMM-DailyPokemon.js",
   "author": "",
   "license": "MIT",
@@ -9,7 +9,7 @@
     "grunt": "latest",
     "grunt-eslint": "latest",
     "grunt-jsonlint": "latest",
-    "grunt-markdownlint": "^1.0.13",
+    "grunt-markdownlint": "^1.1.6",
     "grunt-stylelint": "latest",
     "grunt-yamllint": "latest",
     "stylelint-config-standard": "latest",
